[package]
name = "quantum-lattice_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Migrated from pqcrypto-dilithium (pre-standardization, C-based) to ml-dsa
# (pure Rust, final FIPS 204 ML-DSA-65 standard). Pure Rust is what makes
# real in-browser WASM signing possible for the wallet.
ml-dsa = "0.1"
getrandom = "0.4"
rocksdb = "0.21"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
sha3 = "0.10" # Modern SHA-3 (Keccak/Shake) hash standard
tokio = { version = "1.35", features = ["full"] } # Robust bare-metal async network loop
hex = "0.4.3"
argon2 = "0.5" # Password hashing for the email/login directory layer (Phase 7b) — separate from wallet key security
rand_core = { version = "0.6", features = ["getrandom"] } # Needed for OsRng, used by argon2's salt generation
aes-gcm = "0.10" # Vault key encryption at rest
pbkdf2 = "0.12" # Vault password-based key derivation
sha2 = "0.10" # SHA-256 for PBKDF2 (distinct from sha3/Keccak used elsewhere)
rpassword = "7" # Masked password prompts on the terminal for vault unlock
serde_json = "1.0" # Reliable (de)serialization for the encrypted vault file format
lettre = "0.11" # Sends real verification emails via Gmail SMTP
dotenvy = "0.15" # Loads SMTP credentials from secrets.env — never hardcoded
