[package]
name = "ql-wallet-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ml-dsa = "0.1"
wasm-bindgen = "0.2"
# getrandom 0.3+ changed how the browser backend is selected — a Cargo
# feature alone isn't enough anymore, it also needs an explicit --cfg flag
# (set in .cargo/config.toml in this same folder). If the build errors
# about "no backend available" or similar, that cfg file is the thing to
# check first.
getrandom = { version = "0.4", features = ["wasm_js"] }

[profile.release]
opt-level = "s"
